Fix image container overflow

--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -1,5 +1,5 @@
 #contact {
-    font-size: calc(12px + 0.25vw);
+    font-size: calc(16px + 0.25vw);
     position: absolute;
     display: flex;
     flex: 1;
@@ -32,6 +32,8 @@
     justify-content: space-between;
     background-color: rgba(0, 0, 0, 0.5);
     padding: calc(10px + 1vw);
+    font-size: calc(16px + 0.25vw);
+    ;
 }
 
 .contact-instr {
