--- a/src/css/home.css
+++ b/src/css/home.css
@@ -8,6 +8,7 @@
     background-size: cover;
     display: flex;
     justify-content: flex-end;
+    overflow: hidden;
 }
 
 .blur {
